examples/test/testpolicy1606.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1606
  namespace: namespace494
spec:
  podSelector:
    matchLabels:
      key26: value24
      key19: value45
      key39: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value27
      podSelector:
        matchLabels:
          key8: value4
          key4: value16
          key24: value8
